# taichi-splatting

./: .gitignore  50%  BENCHMARK.md  NOTICE  README.md  pyproject.toml  setup.py
benchmarks/: benchmark-2070.csv  benchmark-3090.csv  benchmark-4090.csv  make_charts.py
benchmarks/raw/: benchmark-2070.csv  benchmark-3090.csv  benchmark-4090.csv
gaussian_rasterizer/: __init__.py  culling.py  data_types.py  projection.py  rasterizer.py  renderer.py  spherical_harmoics.py  tile_mapper.py
gaussian_rasterizer/rasterizer/: __init__.py  forward.py
gaussian_rasterizer/taichi/: bounding.py  covariance.py  projection.py  transforms.py
gaussian_rasterizer/ti/: covariance.py  projection.py
gaussian_rasterizer/torch/: transforms.py
profiles/: bicycle_2048.txt
taichi_splatting/: __init__.py  autograd.py  culling.py  data_types.py  depth_var.py  depth_variance.py  indexed_spherical_harmonics.py  projection.py  renderer.py  renderer2d.py  rendering.py  segmented_tile_mapper.py  slang_util.py  spherical_harmoics.py  spherical_harmonics.py  taichi_queue.py  tile_mapper.py
taichi_splatting/benchmarks/: bench_projection.py  bench_rasterizer.py  bench_sh.py  bench_tilemapper.py  rasterizer.py  util.py
taichi_splatting/cuda_lib/: __init__.py  full_cumsum.cu  module.cpp  radix_sort_pairs.cu  scan.cu  segmented_sort_pairs.cu  sort_pairs.cu
taichi_splatting/examples/: Architecture.dot  architecture.dot  autoencoder.py  compare.py  fit_image_gaussians.py  logger_utils.py  mlp_predictors.py  parameter_class.py  renderer2d.py  test_backward.py  test_split.py  test_visibility.py  vis_split.py
taichi_splatting/examples/outputs/: Alpha MLP.csv  Baseline (No MLPs).csv  Both MLPs Pretrained and Frozen.csv  Both MLPs Pretrained.csv  Covariance MLP.csv  Covariance and Alpha MLPs.csv  alpha_fixed.pt  cov_fixed.pt
taichi_splatting/mapper/: bump_mapper.py  segmented_tile_mapper.py  tile_mapper.py
taichi_splatting/misc/: depth_variance.py  encode_depth.py  indexing.py  morton_sort.py  parameter_class.py  radius.py  renderer2d.py  sparse_adam.py  sparse_vector_adam.py  split.py
taichi_splatting/optim/: __init__.py  fractional.py  fractional_adam.py  fractional_laprop.py  optimizer.py  parameter_class.py  sparse_adam.py  util.py  visibility_aware.py
taichi_splatting/optim_slang/: fractional.py  fractional_adam.py  fractional_adam.slang  fractional_laprop.py  fractional_laprop.slang  vector.slang  visibility_aware.py
taichi_splatting/perspective/: __init__.py  culling.py  params.py  plane_culling.py  projection.py  projection2.py
taichi_splatting/rasterizer/: __init__.py  backward.py  forward.py  function.py  tiling.py  visibility.py
taichi_splatting/scripts/: fit_image_gaussians.py  parameter_class.py  train_image.py
taichi_splatting/slang/: matrix.slang  spherical_harmonics.slang
taichi_splatting/taichi_funcs/: bounding.py  conversions.py  covariance.py  projection.py  transforms.py
taichi_splatting/taichi_lib/: __init__.py  concurrent.py  conversions.py  f32.py  f64.py  generic.py  grid_query.py
taichi_splatting/tests/: random_data.py  test_benchmarks.py  test_conic.py  test_projection.py  test_rasterizer.py  test_spherical_harmonics.py  test_visibility.py  util.py
taichi_splatting/tests_slang/: fa_bench.py  fa_consist.py  fa_vector.py  fit_image_gaussians.py  fl_bench.py  fl_consist.py
taichi_splatting/ti/: covariance.py  projection.py  util.py
taichi_splatting/torch/: spherical_harmonics.py
taichi_splatting/torch_lib/: projection.py  spherical_harmonics.py  transforms.py  util.py
taichi_splatting/torch_ops/: projection.py  rsh.py  spherical_harmonics.py  transforms.py  util.py
