[project]
name = "taichi-splatting"  
version = "0.32.0"  
description = "A Taichi Gaussian Splatting library"  
readme = "README.md" 
requires-python = ">=3.10"
license = {file = "LICENSE"}

maintainers = [
  {name = "Oliver Batchelor", email = "oliver.batchelor@canterbury.ac.nz" } 
]

dependencies = [
  "beartype", 
  "gstaichi", 
  "tqdm", 
  "tensordict >=0.7.0",
  "packaging" 
]


[tool.setuptools.packages.find]
include = ["taichi_splatting"]
exclude = ["profiles", "benchmarks"]


[project.urls] 
"Homepage" = "https://github.com/uc-vision/taichi-splatting"

[build-system]
# Hatching
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"


[project.scripts]  # Optional
fit_image_gaussians = "taichi_splatting.examples.fit_image_gaussians:main"
bench_projection = "taichi_splatting.benchmarks.bench_projection:main"
bench_rasterizer = "taichi_splatting.benchmarks.bench_rasterizer:main"
bench_tilemapper = "taichi_splatting.benchmarks.bench_tilemapper:main"

bench_sh = "taichi_splatting.benchmarks.bench_sh:main"


[tool.setuptools.package-data]

[tool.pyright]
reportInvalidTypeForm = "none"

[tool.ruff]
indent-width = 2

[tool.pytest.ini_options]
filterwarnings = [
    # disable "UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor"
    "ignore::UserWarning"  
]

